# pi-gateway

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
docs/: 01-architecture-overview.md  02-startup-and-cli-flow.md  03-telegram-gateway.md  04-pi-rpc-integration.md  05-session-mapping-and-sqlite.md  06-configuration-and-deployment.md  07-troubleshooting.md  README.md
examples/: config.yaml
pi_gateway/: cli.py  config.py  db.py  pi_rpc.py  session_manager.py  telegram_bot.py  version_check.py
systemd/: pi-gateway.service
